--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,46 +63,44 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.3.0'
 
     // for TapsellPlus
-    implementation 'ir.tapsell.plus:tapsell-plus-sdk-android:2.2.1'
+    implementation 'ir.tapsell.plus:tapsell-plus-sdk-android:2.2.3'
 
     //for adMob
-//    implementation 'com.google.android.gms:play-services-ads:21.5.0'
+    implementation 'com.google.android.gms:play-services-ads:21.5.0'
 
     //for unityAds
-//    implementation 'com.unity3d.ads:unity-ads:4.6.1'
+    implementation 'com.unity3d.ads:unity-ads:4.6.1'
 
     //for chartboost
-//    implementation 'com.chartboost:chartboost-sdk:8.2.1'
+    implementation 'com.chartboost:chartboost-sdk:8.2.1'
 
     //for applovin
-//    implementation 'com.applovin:applovin-sdk:11.8.2'
+    implementation 'com.applovin:applovin-sdk:11.8.2'
 
     //for adcolony
-//    implementation 'com.adcolony:sdk:4.8.0'
+    implementation 'com.adcolony:sdk:4.8.0'
 
-//    implementation ("com.google.android.gms:play-services-base:18.2.0"){
-//        exclude group: 'com.android.support'
-//    }
-//    implementation ("com.google.android.gms:play-services-ads-identifier:18.0.1"){
-//        exclude group: 'com.android.support'
-//    }
+    implementation ("com.google.android.gms:play-services-base:18.2.0"){
+        exclude group: 'com.android.support'
+    }
+    implementation ("com.google.android.gms:play-services-ads-identifier:18.0.1"){
+        exclude group: 'com.android.support'
+    }
 
     // For Mintegral - NOTE: Add custom repository (explained after this)
-//    implementation "com.mbridge.msdk.oversea:videojs:16.3.91"
-//    implementation "com.mbridge.msdk.oversea:mbbanner:16.3.91"
-//    implementation "com.mbridge.msdk.oversea:mbjscommon:16.3.91"
-//    implementation "com.mbridge.msdk.oversea:playercommon:16.3.91"
-//    implementation "com.mbridge.msdk.oversea:reward:16.3.91"
-//    implementation "com.mbridge.msdk.oversea:videocommon:16.3.91"
-//    implementation "com.mbridge.msdk.oversea:same:16.3.91"
-//    implementation "com.mbridge.msdk.oversea:interstitialvideo:16.3.91"
-
-    implementation 'com.google.android.material:material:1.9.0'
-
+    implementation "com.mbridge.msdk.oversea:videojs:16.3.91"
+    implementation "com.mbridge.msdk.oversea:mbbanner:16.3.91"
+    implementation "com.mbridge.msdk.oversea:mbjscommon:16.3.91"
+    implementation "com.mbridge.msdk.oversea:playercommon:16.3.91"
+    implementation "com.mbridge.msdk.oversea:reward:16.3.91"
+    implementation "com.mbridge.msdk.oversea:videocommon:16.3.91"
+    implementation "com.mbridge.msdk.oversea:same:16.3.91"
+    implementation "com.mbridge.msdk.oversea:interstitialvideo:16.3.91"
+    
     // for Vast (PreRoll)
-    implementation("com.google.ads.interactivemedia.v3:interactivemedia:3.30.1")
-    implementation 'com.google.android.exoplayer:exoplayer-core:2.18.7'
-    implementation 'com.google.android.exoplayer:exoplayer-ui:2.18.7'
+    implementation("com.google.ads.interactivemedia.v3:interactivemedia:3.31.0")
+    implementation 'com.google.android.exoplayer:exoplayer-core:2.19.1'
+    implementation 'com.google.android.exoplayer:exoplayer-ui:2.19.1'
 
     testImplementation 'junit:junit:4.13.2'
 
